Zero: handle JVM_CONSTANT_DynamicInError

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 16
    • Affects Version/s: 11, 15, 16
    • Component/s: hotspot
    • b23

      JDK-8186211 introduced a few negative tests for Condy, and Zero seem to fail them:

      $ CONF=linux-x86_64-zero-fastdebug make run-test TEST=java/lang/invoke/condy/CondyRepeatFailedResolution.java

      # Internal Error (/home/shade/trunks/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2289), pid=574573, tid=581749
      # Error: ShouldNotReachHere()

      After some debugging, I think Zero misses to handle JVM_CONSTANT_DynamicInError. I believe we can just do the same thing as JVM_CONSTANT_Dynamic, and then let CALL_VM to go to handle_exception on another resolution failure.

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: