8255744: Zero: handle JVM_CONSTANT_DynamicInError